打通前后端列表的获得

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,11 @@
 server:
   servlet:
-    context-path: /sell/
+    context-path: /sell
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1:3306/sell?characterEncoding=utf-8&useSSL=false
+sell:
+  imageHost: http://img.www.lovingliu.cn/ftpfile/
