--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 server:
   servlet:
-    context-path: /sell/
+    context-path: /sell
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -9,3 +9,5 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+sell:
+  imageHost: http://49.235.110.134/ftpfile/
