--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,3 +11,9 @@ spring:
     show-sql: true
 sell:
   imageHost: http://49.235.110.134/ftpfile/
+wx:
+  mp:
+    appId: wxd0491840b258a176 #（一个公众号的appid）
+    secret: 8920134334693cdb35e3281d598088f6 #（公众号的appsecret）
+    token: lovingliu #（接口配置里的Token值）
+    aesKey: 5X0BfVHuIIG5NlTSc3psWI9nuE3ffRHMipbEip5wTWN #（接口配置里的EncodingAESKey值）
