--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,3 +9,10 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/sell?characterEncoding=utf-8&useSSL=false
 sell:
   imageHost: http://img.www.lovingliu.cn/ftpfile/
+wx:
+  mp:
+    configs:
+      - appId: wxd0491840b258a176 #（一个公众号的appid）
+        secret: 8920134334693cdb35e3281d598088f6 #（公众号的appsecret）
+        token: lovingliu #（接口配置里的Token值）
+        aesKey: 5X0BfVHuIIG5NlTSc3psWI9nuE3ffRHMipbEip5wTWN #（接口配置里的EncodingAESKey值）
