--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,8 +11,8 @@ sell:
   imageHost: http://img.www.lovingliu.cn/ftpfile/
 wx:
   mp:
-    appId: wxd0491840b258a176 #（一个公众号的appid）
-    secret: 8920134334693cdb35e3281d598088f6 #（公众号的appsecret）
+    appId: wxa038ebca085783b2 #（一个公众号的appid）
+    secret: c707d0c27f832a04a968d5eb3f7ae41b #（公众号的appsecret）
     token: lovingliu #（接口配置里的Token值）
     aesKey: 5X0BfVHuIIG5NlTSc3psWI9nuE3ffRHMipbEip5wTWN #（接口配置里的EncodingAESKey值）
     mchId:  商户id
