实现登陆AOP拦截

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,6 +7,19 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1:3306/sell?characterEncoding=utf-8&useSSL=false
+  # Redis数据库索引（默认为0）
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: lovingliu
+    jedis:
+      pool:
+        max-active: 10 #最大连接数
+        max-wait: -1 #最大阻塞等待时间(负数表示没限制)
+        max-idle: 10 #最大空闲
+        min-idle: 0 #最小空闲
+    timeout: 10000 #链接超时时间
   jpa:
     show-sql: true
 
@@ -22,3 +35,10 @@ wx:
     mchKey: 商户密钥
     keyPath: 商户证书地址
     notifyUrl: 异步通知地址
+    openAppid: wxddd4a5b712403710 #（开发平台）
+    openSecret: 145910bc8a631214e3c6216f2290bb38 #（开发平台）
+
+projectUrl:
+  wechatMpAuthorize: http://2a3789d893.zicp.vip/
+  wechatOpenAuthorize: http://2a3789d893.zicp.vip/
+  sell: http://2a3789d893.zicp.vip/
