--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,3 +27,7 @@ project-url:
   wechatOpenAuthorize: http://2a3789d893.zicp.vip/
   sell: http://2a3789d893.zicp.vip/
 
+# 设置日志级别 打印sql
+logging:
+  level:
+    cn.lovingliu.sell.dataobject.mapper: trace
